@@ -26,6 +26,10 @@
 extern "C" {
 #endif
 
+#ifdef HAVE_STDINT_H
+#include <stdint.h>
+#endif
+
 #include <sys/socket.h>
 
 #include <freeipmi/ipmi-error.h>
