@@ -1,3 +1,9 @@
+2006-12-15  Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/include/freeipmi/ipmi-cipher-suite-spec.h,
+	libfreeipmi/include/freeipmi/ipmi-device-global-cmds.h,
+	libfreeipmi/include/freeipmi/udm/ipmi-udm.h: Include stdint.h.
+	
 2006-12-15  Anand Babu  <ab@zresearch.com>
 
 	* libfreeipmi/include/*/*: g++ compatibility definitions.
